# HighPerformanceHPCG_Thesis

./: .gitignore  444_noCOR_box_bench.out  AllTests_Output.out  AllTests_Output.txt  Benchmark.out  Benchmark128.out  Benchmark444boxes.out  BenchmarkAMGXA100.out  CMakeLists.txt  Data.out  LICENSE  ProfilerA100.out  ProfilerAMGX128A100.out  README.md  SizeFinder.out  SizeFinder_normal.out  StriperBenchmarkA100.out  StriperBenchmarkA100CORBox.out  cast_mask.py  change_includes.py  debug_output1 copy.txt  debug_output1.txt  get_debug_info.py  hipify_script.sh  load_spack.sh  necessary_runs.out  necessary_runs2.out  nvidia_smi.sh  plotting.py  profilingBytes.out  remove_original.py  run_444_box_bench.sh  run_444_static_box_bench.sh  run_AMGXBenchmarksA100.sh  run_ProfilerA100.sh  run_SizeFinder.sh  run_StriperBenchmarksA100.sh  run_allBechmarks.sh  run_allBechmarks128.sh  run_allTests.sh  (+6 more)
HPCGLib/: CMakeLists.txt  CMakeLists.txt.bak  generations_.cpp
HPCGLib/benchmarking/: CMakeLists.txt  abstract_benchmark_functions.cpp  abstract_benchmark_functions_hipified.cpp  bench_for_reference.cpp  benchmark_bandedPreprocessed.cpp  benchmark_bandedSharedMem.cpp  benchmark_bandedWarpReduction.cpp  benchmark_cuSparse.cpp  benchmark_cuSparse_hipified.cpp  benchmark_multi_GPU.cpp  benchmark_multi_GPU_hipified.cpp  benchmark_naiveBanded.cpp  benchmark_naiveStriped.cpp  benchmark_naiveStriped_hipified.cpp  benchmark_noStoreStripedColoring.cpp  benchmark_noStoreStripedColoring_hipified.cpp  benchmark_stripedBoxColoring.cpp  benchmark_stripedBoxColoring_hipified.cpp  benchmark_stripedCORBoxColoring.cpp  benchmark_stripedCORBoxColoring_hipified.cpp  benchmark_stripedColoring.cpp  benchmark_stripedColoringPrecomputed.cpp  benchmark_stripedColoringPrecomputed_hipified.cpp  benchmark_stripedColoring_hipified.cpp  benchmark_stripedPreprocessed.cpp  benchmark_stripedPreprocessed_hipified.cpp  benchmark_stripedSharedMem.cpp  benchmark_stripedSharedMem_hipified.cpp  benchmark_stripedWarpReduction.cpp  benchmark_stripedWarpReduction_hipified.cpp  full_bench.cpp  ncu_metrics.txt  profiling.out  profiling444ncu.out  profilingNoFlops.out  run_bench_multi_GPU.cpp  run_bench_multi_GPU_hipified.cpp  run_bench_test_hipified.cpp  run_full_bench.cpp  run_full_bench_hipified.cpp  (+6 more)
HPCGLib/benchmarking/slurm_scripts/: job_bench_multi_GPU_Bench_Nodes_3.slurm
HPCGLib/include/: HPCGLib.hpp  HPCGLib_hipified.hpp  amgx_wrapper.h  benchmark.hpp  benchmark_hipified.hpp  cuda_utils.hpp  testing.hpp  testing_hipified.hpp  utils.cuh  utils.hpp
HPCGLib/include/HPCG_original/: HPCGLib.hpp
HPCGLib/include/HPCG_versions/: AMGX.hpp  HPCGLib.hpp  banded_coloring.cuh  banded_preprocessed.cuh  banded_shared_mem.cuh  banded_warp_reduction.cuh  blocking_mpi_halo_exchange.cuh  blocking_mpi_halo_exchange_hipified.cuh  cusparse.hpp  cusparse_hipified.hpp  hpcg_original.hpp  naiveBanded.cuh  naiveBanded.hpp  naiveStriped.cuh  naiveStriped_hipified.cuh  nccl_halo_exchange.cuh  nccl_halo_exchange_hipified.cuh  no_store_striped_coloring.cuh  no_store_striped_coloring_hipified.cuh  non_blocking_mpi_halo_exchange.cuh  non_blocking_mpi_halo_exchange_hipified.cuh  striped_COR_box_coloring.cuh  striped_COR_box_coloring_hipified.cuh  striped_box_coloring.cuh  striped_box_coloring_hipified.cuh  striped_coloring.cuh  striped_coloringPrecomputed.cuh  striped_coloringPrecomputed_hipified.cuh  striped_coloring_hipified.cuh  striped_multi_GPU.cuh  striped_multi_GPU_hipified.cuh  striped_preprocessed.cuh  striped_preprocessed_hipified.cuh  striped_shared_mem.cuh  striped_shared_mem_hipified.cuh  striped_warp_reduction.cuh  striped_warp_reduction_hipified.cuh  striped_warp_reduction_multi_GPU.cuh
HPCGLib/include/MatrixLib/: banded_Matrix.hpp  coloring.cuh  coloring_hipified.cuh  generations.cuh  generations.hpp  generations_hipified.cuh  generations_hipified.hpp  matrix_basics_hipified.hpp  sparse_CSR_Matrix.hpp  sparse_CSR_Matrix_hipified.hpp  striped_Matrix.hpp  striped_Matrix_hipified.hpp  striped_partial_Matrix.hpp  striped_partial_Matrix_hipified.hpp
HPCGLib/include/TimingLib/: MPITimer.hpp  MPITimer_hipified.hpp  cpuTimer.hpp  cudaTimer.hpp  cudaTimer_hipified.hpp  timer.hpp  timer_hipified.hpp
HPCGLib/include/UtilLib/: cuda_utils.hpp  cuda_utils_hipified.hpp  hpcg_mpi_utils.cuh  hpcg_multi_GPU_utils.cuh  hpcg_multi_GPU_utils_hipified.cuh  utils.cuh  utils.hpp  utils_hipified.cuh  utils_hipified.hpp
HPCGLib/src/: CMakeLists.txt  all_tests.cpp  utils.cpp
HPCGLib/src/HPCG_versions/: CMakeLists.txt
HPCGLib/src/MatrixLib/: CMakeLists.txt  banded_Matrix.cpp  coloring.cu  coloring_hipified.cpp  generations.cpp  generations.cu  generations_hipified.cpp  sparse_CSR_Matrix.cpp  sparse_CSR_Matrix_hipified.cpp  striped_Matrix.cpp  striped_Matrix_hipified.cpp  striped_partial_Matrix.cpp  striped_partial_Matrix_hipified.cpp
HPCGLib/src/TimingLib/: CMakeLists.txt  MPITimer.cpp  MPITimer_hipified.cpp  cpuTimer.cpp  cudaTimer.cpp  cudaTimer_hipified.cpp  timer.cpp  timer_hipified.cpp
HPCGLib/src/UtilLib/: CMakeLists.txt  hpcg_mpi_utils.cu  hpcg_mpi_utils_hipified.cpp  utils.cpp  utils.cu  utils_hipified.cpp
HPCGLib/testing/: CMakeLists.txt  MatrixLib_tests.cpp  MatrixLib_tests_hipified.cpp  UtilLib_tests.cpp  UtilLib_tests_hipified.cpp  all_tests.cpp  job_bench_multi_GPU.slurm  job_run_multi_GPU.slurm  job_test_multi_GPU.slurm  quicktesting.cpp  result.out  run_all_tests.cpp  run_all_tests_hipified.cpp  run_coloring.cpp  run_coloring_hipified.cpp  run_example.cpp  run_example_hipified.cpp  run_get_Norm.cpp  run_get_Norm_hipified.cpp  run_multi_GPU.cpp  run_multi_GPU_hipified.cpp  run_multi_GPU_tests.cpp  run_multi_GPU_tests_hipified.cpp  run_quicktesting.cpp
HPCGLib/testing/HPCG_versions_tests/: amgx_tests.cpp  bandedColored_tests.cpp  bandedPreprocessed_tests.cpp  bandedSharedMem_tests.cpp  bandedWarpReduction_tests.cpp  cuSparse_tests.cpp  cuSparse_tests_hipified.cpp  dim_check.cpp  dim_check_hipified.cpp  kernel_multi_GPU_tests.cpp  kernel_multi_GPU_tests_hipified.cpp  naiveBanded_tests.cpp  naiveStriped_tests.cpp  stripedBoxColoring_tests.cpp  (+19 more)
(+3433 files in other folders)
